FIX Make the HoverBar in-between block more visible

--- a/client/src/components/ElementEditor/HoverBar.scss
+++ b/client/src/components/ElementEditor/HoverBar.scss
@@ -1,65 +1,82 @@
-.element-editor__add-block-area-container {
+$transition: all ease .2s;
+
+.hover-bar {
   height: 0;
   display: flex;
   width: 100%;
   position: relative;
   align-items: center;
-}
 
-.element-editor__add-block-area {
-  background-color: transparent;
-  min-height: $spacer * 1.5;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  transition: 0s;
-}
-
-.element-editor__add-block-hover-bar {
-  align-self: center;
-  width: 100%;
-  -webkit-appearance: button;
-  border: 0;
-  position: absolute;
-  display: flex;
-  justify-content: flex-end;
-  padding: 0;
-  top: 50%;
-  transform: translateY(-66%);
-
-  &:before {
-    font-size: 1.5rem;
-    background-image: radial-gradient(#fff 50%, transparent 50%);
-    // Fallback for IE11 & other browsers that don't support the calc() below
-    transform: translateY(-35%);
-    // position plus 'button' to be able to modify it's z-index
+  &__area {
+    background-color: transparent;
+    min-height: $spacer * 1.5;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    transition: $transition;
     position: relative;
-    z-index: 2;
-    margin-right: $panel-padding-x/2;
-    display: block;
-    height: 1em;
-  }
 
-  &--delay {
-    background-color: $border-color-dark;
-    max-height: 3px;
+    &-inner {
+      margin: 0 0;
+      display: block;
+      position: relative;
+      transition: $transition;
+    }
 
-    &:before {
-      transform: translateY(calc((3px/2) + -50%));
-      color: $border-color-dark;
+    &:hover, &:focus, &--focus {
+      outline: none;
+
+      .hover-bar__area-inner {
+        margin: 0 20px;
+      }
+      .hover-bar__line {
+        opacity: 1;
+        border-radius: 5px;
+        max-height: 5px;
+        &:before {
+          transform: translateY(calc(2px + -50%))  scale(1);
+        }
+      }
     }
   }
 
-  &--inst {
-    background-color: $component-active-bg;
-    max-height: 5px;
+  &__line {
+    background-color: $blue;
+    transition: $transition;
+    opacity: 0;
+    align-self: center;
+    width: 100%;
+    border: 0;
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
+    top: 50%;
+    transform: translateY(-66%);
+    max-height: 0;
+    border-radius: 0;
 
     &:before {
-      transform: translateY(calc((5px/2) + -50%));
-      color: $component-active-bg;
+      font-size: 1.5rem;
+      background-image: radial-gradient(#fff 50%, transparent 50%);
+      // position plus 'button' to be able to modify it's z-index
+      position: relative;
+      z-index: 2;
+      margin-right: 50%;
+      display: block;
+      height: 1em;
+      // IE-11 fallback
+      transform: translateY(-35%);
+      transform: translateY(calc(-1px + -50%)) scale(0);
+      transition: $transition;
+      color: $blue;
     }
   }
 }
+
+
+
+
 
